--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "live-friend-locations-api",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "",
   "main": "server.js",
   "scripts": {
@@ -9,10 +9,10 @@
   },
   "keywords": [],
   "author": "",
-  "license": "ISC",
+  "license": "BSD 2",
   "dependencies": {
-    "dotenv": "^10.0.0",
-    "express": "^4.17.1",
-    "randomstring": "^1.2.1"
+    "dotenv": "^16.0.3",
+    "express": "^4.18.2",
+    "randomstring": "^1.2.3"
   }
 }
